--- a/ForceRotation/Base.lproj/Main.storyboard
+++ b/ForceRotation/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ForceRotation" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,70 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BaD-L6-tiF">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <connections>
+                                    <segue destination="h5f-1N-zLj" kind="embed" id="V7Z-UF-HbK"/>
+                                </connections>
+                            </containerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ap-bR-zGO">
+                                <rect key="frame" x="514" y="554" width="70" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Pyi-T9-e3F"/>
+                                    <constraint firstAttribute="width" constant="70" id="nLf-4Y-m8G"/>
+                                </constraints>
+                                <state key="normal" title="OuterRoll"/>
+                                <connections>
+                                    <action selector="outerroll:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hyK-Gn-BRm"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BaD-L6-tiF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="9XZ-ZB-I3r"/>
+                            <constraint firstItem="BaD-L6-tiF" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="E68-nd-tnx"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="5ap-bR-zGO" secondAttribute="bottom" constant="16" id="Gle-Ac-7nn"/>
+                            <constraint firstAttribute="trailing" secondItem="5ap-bR-zGO" secondAttribute="trailing" constant="16" id="ZFs-Dg-msx"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="BaD-L6-tiF" secondAttribute="bottom" id="eGa-dy-ogs"/>
+                            <constraint firstAttribute="trailing" secondItem="BaD-L6-tiF" secondAttribute="trailing" id="h2d-J7-Pzr"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--Inner View Contoller-->
+        <scene sceneID="uY9-KT-ocf">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dS1-va-bUl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="h5f-1N-zLj" customClass="InnerViewContoller" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3Eo-PZ-r6c"/>
+                        <viewControllerLayoutGuide type="bottom" id="mO7-DD-Oc5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fGr-zi-xbc">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="580"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aov-TS-bYC">
+                                <rect key="frame" x="277" y="275" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="ILa-Ra-44k"/>
+                                    <constraint firstAttribute="height" constant="30" id="bsx-yI-yz6"/>
+                                </constraints>
+                                <state key="normal" title="Roll"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Aov-TS-bYC" firstAttribute="centerY" secondItem="fGr-zi-xbc" secondAttribute="centerY" id="9mH-yD-cbG"/>
+                            <constraint firstItem="Aov-TS-bYC" firstAttribute="centerX" secondItem="fGr-zi-xbc" secondAttribute="centerX" id="DdR-VW-3ey"/>
+                        </constraints>
+                    </view>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1145" y="351"/>
         </scene>
     </scenes>
 </document>
